# optrone

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Changelog.md  Guidelines.md  LICENSE  README.md  Readme.md  changelog.md  contributing.md  readme.md  uncrustify.cfg
cmake/: cmake_uninstall.cmake.in  config.cmake.in  depman.cmake  option_str.cmake  optrone.pc.in  optrone_config_version.cmake  subdep.cmake
docs/: Doxyfile.in
documentation/: CMakeLists.txt  Doxyfile.in
example/: CMakeLists.txt  taskmgr.cpp
examples/: CMakeLists.txt  example.cpp
include/: optrone.hpp  optrone_config.hpp.in
include/optrone/: error.hpp  help.hpp  optrone.hpp  parser.hpp  template.hpp
source/: CMakeLists.txt  help.cpp  main.cpp  optrone.cpp  parser.cpp
src/: optrone.cpp
test/: CMakeLists.txt  basic.cpp  error.cpp
tests/: CMakeLists.txt  test_0.cpp  test_1.cpp  test_10.cpp  test_11.cpp  test_12.cpp  test_2.cpp  test_3.cpp  test_4.cpp  test_5.cpp  test_6.cpp  test_7.cpp  test_8.cpp  test_9.cpp  test_header.hpp  test_helper.hpp  tester.cpp
